--- a/index.html
+++ b/index.html
@@ -5,18 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Joke Generator</title>
     <!--Step 6: Import stylesheet -->
+    <link rel="stylesheet" href="styles.css">
 
 </head>
-<body>
+<body class="jokeAPI-background">
 
     <!--Navbar-->
     <nav class="navbar">
         <a href="/index.html" class="nav-link">Joke API</a>
         <!--Step 5: Create a new page in the navbar using <a> tag -->
+        <a href="/challenge.html" class="nav-link">Challenge</a>
     </nav>
 
     <!--Step 1: Create a <div> container-->  
+    <div class="container">
+        <h1 class="title">Joke Generator</h1>
 
+        <p id="jokeText"></p>
+
+        <button id="getJokeBtn">Get Joke</button>
+
+
+
+
+    </div>
     <!--Step 2: Create a <h1> title tag -->
     
     <!--Step 3: Create a <button> tage -->
@@ -30,7 +42,7 @@
     <!--Step 11: Apply style class .container and .centered-content to <div> tage -->
 
     <!--Step 15: import the js file-->
-
+        <script src="index.js"></script>
     
 </body>
 </html>
